Update script.js to create board

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
     <title>Chess</title>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </head>
 
 <body>
     <h1>Chess</h1>
-    <div id="board"></div>
+    <div id="board" style="height: 800px; width: 800px"></div>
 </body>
