--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <head>
     <title>Chess</title>
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" type="module"></script>
 </head>
 
 <body>
     <h1>Chess</h1>
-    <div id="board" style="height: 800px; width: 800px"></div>
+    <div id="board" class="board"></div>
 </body>
