--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- no doctype because the outlines only behave correctly without it -->
 <head>
     <title>Chess</title>
     <link rel="stylesheet" href="style.css">
